# vstgui

./: .editorconfig  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  patch.diff
vstgui/: .clang-format  .clang-format-off  CMakeLists.txt  Changelog  _clang-format  aeffguieditor.cpp  aeffguieditor.h  cdatabrowser.cpp  cdatabrowser.h  cfileselector.cpp  cfileselector.h  cocoasupport.h  cocoasupport.mm  cscrollview.cpp  cscrollview.h  ctabview.cpp  ctabview.h  ctooltipsupport.cpp  ctooltipsupport.h  cvstguitimer.cpp  cvstguitimer.h  plugguieditor.cpp  plugguieditor.h  vstcontrols.cpp  vstcontrols.h  vstgui.cpp  vstgui.h  vstgui_ios.mm  vstgui_linux.cpp  vstgui_mac.mm  vstgui_standalone.cpp  vstgui_standalone_mac.mm  vstgui_standalone_win32.cpp  vstgui_uidescription.cpp  vstgui_uidescription.h  vstgui_uidescription_ios.mm  vstgui_uidescription_mac.mm  vstgui_uidescription_win32.cpp  vstgui_win32.cpp  vstguidebug.cpp  (+3 more)
vstgui/Documentation/: README.md  index.html
vstgui/cmake/modules/: vstgui_init.cmake
vstgui/contrib/: ciboxblurfilter.h  ciboxblurfilter.mm  compresseduidescription.cpp  compresseduidescription.h  datepicker.h  datepicker.mm  datepicker_win32.cpp  evbutton.h  evbutton_macos.mm  evbutton_win32.cpp  externalview_direct3d12.h  externalview_hwnd.h  externalview_metal.h  externalview_nsview.h  keyboardview.cpp  keyboardview.h
vstgui/doxygen/: Doxyfile  doc.h  doxydocu.css  page_changelog.h  page_changes.h  page_create_your_own_ui_view.h  page_create_your_own_ui_view.md  page_keyeventflow.h  page_license.h  page_misc.h  page_tutorial.h  page_view_system_overview.h  tutorial.h
vstgui/ide/codeblocks/: vstgui.cbp
vstgui/ide/cppcheck/: standalone.cppcheck  uidescription.cppcheck  vstgui.cppcheck
vstgui/ide/visualstudio/: vstgui.vcproj  vstgui.vcxproj  vstgui.vcxproj.filters
vstgui/lib/: CMakeLists.txt  aeffguieditor.cpp  algorithm.h  cbitmap.cpp  cbitmap.h  cbitmapfilter.cpp  cbitmapfilter.h  cbuttonstate.h  cclipboard.cpp  cclipboard.h  ccolor.cpp  ccolor.h  cdatabrowser.cpp  cdatabrowser.h  cdrawcontext.cpp  cdrawcontext.h  cdrawdefs.h  cdrawmethods.cpp  cdrawmethods.h  cdropsource.cpp  cdropsource.h  cexternalview.cpp  cexternalview.h  cfileselector.cpp  cfileselector.h  cfont.cpp  cfont.h  cframe.cpp  cframe.h  cgradient.cpp  cgradient.h  cgradientview.cpp  cgradientview.h  cgraphicspath.cpp  cgraphicspath.h  cgraphicstransform.h  cinvalidrectlist.h  clayeredviewcontainer.cpp  clayeredviewcontainer.h  clinestyle.cpp  (+63 more)
vstgui/lib/animation/: animations.cpp  animations.h  animator.cpp  animator.h  ianimationtarget.h  itimingfunction.h  timingfunctions.cpp  timingfunctions.h
vstgui/lib/controls/: cautoanimation.cpp  cautoanimation.h  cbuttons.cpp  cbuttons.h  ccolorchooser.cpp  ccolorchooser.h  ccontrol.cpp  ccontrol.h  cfontchooser.cpp  cfontchooser.h  cknob.cpp  cknob.h  clistcontrol.cpp  clistcontrol.h  cmoviebitmap.cpp  cmoviebitmap.h  cmoviebutton.cpp  cmoviebutton.h  coptionmenu.cpp  coptionmenu.h  cparamdisplay.cpp  cparamdisplay.h  cscrollbar.cpp  cscrollbar.h  csearchtextedit.cpp  csearchtextedit.h  csegmentbutton.cpp  csegmentbutton.h  cslider.cpp  cslider.h  cspecialdigit.cpp  cspecialdigit.h  csplashscreen.cpp  csplashscreen.h  cstringlist.cpp  cstringlist.h  cswitch.cpp  cswitch.h  ctextedit.cpp  ctextedit.h  (+11 more)
vstgui/lib/platform/: iplatformbitmap.h  iplatformconcurrency.h  iplatformdrawdevice.h  iplatformfileselector.h  iplatformfont.h  iplatformframe.h  iplatformframecallback.h  iplatformgradient.h  iplatformgraphicsdevice.h  iplatformgraphicspath.h  iplatformopenglview.h  iplatformoptionmenu.h  iplatformresourceinputstream.h  iplatformstring.h  iplatformtaskexecutor.h  iplatformtextedit.h  iplatformtextinputclient.h  iplatformtimer.h  iplatformviewlayer.h  platform_macos.h  platform_win32.h  platform_x11.h  platformfactory.cpp  platformfactory.h  platformfwd.h  std_unorderedmap.h
vstgui/lib/private/: disabledeprecatedmessage.h  enabledeprecatedmessage.h  enbledeprecatedmessage.h
vstgui/plugin-bindings/: aeffguieditor.cpp  aeffguieditor.h  getpluginbundle.h  plugguieditor.cpp  plugguieditor.h  vst3editor.cpp  vst3editor.h  vst3editortemplates.h  vst3groupcontroller.cpp  vst3groupcontroller.h  vst3padcontroller.cpp  vst3padcontroller.h
vstgui/standalone/: CMakeLists.txt  doc.h  fwd.h  ialertbox.h  iappdelegate.h  iapplication.h  iasync.h  icommand.h  imenubuilder.h  interface.h  ipreference.h  ishareduiresources.h  iuidescwindow.h  ivalue.h  ivaluelistener.h  iwindow.h  iwindowcontroller.h  iwindowlistener.h
vstgui/standalone/detail/: application.cpp  application.h  genericalertbox.cpp  genericalertbox.h  shareduiresources.cpp  shareduiresources.h  uidescriptionwindowcontroller.cpp  value.cpp  window.cpp  window.h
vstgui/standalone/examples/: CMakeLists.txt
vstgui/standalone/helpers/: appdelegate.h  modelbinding.h  value.cpp  value.h  valuelistener.h  windowcontroller.h  windowlistener.h
vstgui/standalone/include/: appinit.h  doc.h  fwd.h  ialertbox.h  iappdelegate.h  iapplication.h  iasync.h  icommand.h  icommondirectories.h  imenubuilder.h  interface.h  ipreference.h  (+7 more)
vstgui/tests/: CMakeLists.txt
vstgui/tools/: CMakeLists.txt
vstgui/uidescription/: CMakeLists.txt  base64codec.h  ccolorchooserpanel.cpp  ccolorchooserpanel.h  ceditframe.cpp  ceditframe.h  compresseduidescription.cpp  compresseduidescription.h  cselection.cpp  cselection.h  cstream.cpp  cstream.h  cstream_zlib.cpp  cstream_zlib.h  cviewinspector.cpp  cviewinspector.h  cviewswitchcontainer.cpp  cviewswitchcontainer.h  delegationcontroller.h  dialog.cpp  dialog.h  doc.h  editingcolordefs.h  icontentprovider.h  icontroller.h  iuidescription.h  iuidescriptionaddon.h  iviewcreator.h  iviewfactory.h  macplatformsupport.mm  platformsupport.h  uiattributes.cpp  uiattributes.h  uicolorchooserpanel.cpp  uicolorchooserpanel.h  uicontentprovider.cpp  uicontentprovider.h  uidescription.cpp  uidescription.h  uidescriptionaddonregistry.cpp  (+34 more)
vstgui/uidescription-scripting/: CMakeLists.txt  uiscripting.cpp  uiscripting.h  uiscripting.md
(+2108 files in other folders)
